[package]
edition = "2021"
name    = "esp-h2-dahu"
version = "0.1.0"

[[bin]]
name = "esp-h2-dahu"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-hal          = { version = "0.23.1", features = ["esp32h2"] }
esp-backtrace = { version = "0.15.1", features = ["println", "panic-handler", "exception-handler"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
